# dds_service

./: README.MD  docker-compose.yaml  pyproject.toml
dds_service/: .env.template  manage.py
dds_service/apps/categories/: admin.py  models.py
dds_service/apps/categories/migrations/: 0001_initial.py  0002_initial.py
dds_service/apps/records/: models.py
dds_service/apps/records/admin/: admin.py  filters.py
dds_service/apps/records/migrations/: 0001_initial.py
dds_service/apps/users/: admin.py  models.py
dds_service/dds_service/: asgi.py  settings.py
